03/22/2004 Bob Rossi <bob@brasko.net>

    * std_list.h: Fully doxygenized.
	* std_list.c: Ditto
03/22/2004 Bob Rossi <bob@brasko.net>

    * std_list.c: Documented std_list_node and std_list.

03/18/2004 Bob Rossi <bob@brasko.net>

    * include/std_list.h: Wrote from scratch. Forget Glib.
	* src/std_list.c: Ditto
	* src/std_list_driver.c: Ditto
	* include/std_types.h (STDFunc): change return type from void to int

03/16/2004 Bob Rossi <bob@brasko.net>

    * src/Makefile.am: Add tgdb_list.c, std_hash.c, std_tree.c to libadt.
	Build std_hash_driver,std_list_driver and std_tree_driver to test them.
	* src/Makefile.in: Auto generated for people without auto tools.
	* std_types.h: Ditto
	* std_hash.h: Added
	* std_hash.c: Ditto
	* std_hash_driver.c: Ditto
	* std_list.h: Ditto
	* std_list.c: Ditto
	* std_list_driver.c: Ditto
	* std_tree.h: Ditto
	* std_tree.c: Ditto
	* std_tree_driver.c: Ditto

01/08/2004 Bob Rossi <bob@brasko.net>

   * Makefile.in: regenerated with documented autotools version
   * src/Makefile.in: ditto

version 0.4.0-1 cygwin release

12/03/2003 Ronald Landheer-Cieslak <ronald@landheer.com>

   * Makefile.in: re-generated
   * src/Makefile.in: ditto
   * src/Makefile.am: set include path relative to source tree

version 0.4.0 (10/28/2003):

10/23/2003 Bob Rossi <bob@brasko.net>

   * tgdb_list.h: add tgdb_list_clear prototype
   * tgdb_list.c: add tgdb_list_clear implementation

10/13/2003 Bob Rossi <bob@brasko.net>

   * ibuf.h: rename 'struct string' to 'string ibuf'
   Change all function names using 'string' to 'ibuf'.
   * ibuf.c: ditto

09/25/2003 Bob Rossi <bob@brasko.net>

   * ibuf.h: Add new function 'string_dup' and comment
   * ibuf.c: Implement new function.

09/24/2003 Bob Rossi <bob@brasko.net>

   * tgdb_list.h: Add 'struct tgdb_list_node' forward reference.
   change 'tgdb_list_func' to return an int.
   tgdb_list_init, better comment for return value.
   tgdb_list_append, tgdb_list_prepend,tgdb_list_insert_after,